@@ -1,3 +1,8 @@
+2003-04-08  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl (::tkcon::InitUI): WinCE code to resize the window to
+	fit on the small screen
+
 2003-03-31  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkcon.tcl (tkcon::Retrieve): correct the check for tkcon version
